		cache configuration files. The error messages have been updated
		to provide more information about the usage. There were some
		situations of wrong configurations that made the simulator crash.

2010-03-16
	* processor.c: -decode_width option added.
	* commit.c: bug fixed. Recover at commit didn't work properly.
	* libm2skernel/syscall.c: system call 'uname': debug information added.

2010-03-30
	Version 2.3 Released

2010-03-30
	* m2skernel.h: context lists updated with 'head' and 'tail' pointers.
	* syscall.c: syscall 'sched_getaffinity'
	* syscall:c: syscall 'fcntl64' with command F_GETFD.
	* configure.in: check for ncurses.

2010-04-16
	* m2s-pipeline.c: KEY_RESIZE event.

2010-04-21
	* loader.c: error message for wrong stdin/stdout.

2010-04-29
	* cachesystem.c: option '-report:cache' to dump detailed stats
		about the cache system. Stats printed on 'stderr' are
		reduced to the hit ratio.
	* processor.c: option '-report:pipeline" to dump detailed stats.
		Stats dumped in stderr are summarized.
	
2010-04-30
	* bpred.c: stats removed from stderr.
	* cachesystem.c: report for caches.

2010-05-01
	* cachesystem.c: parameters '-iports', '-dports' removed. Instead, keys
		ReadPorts and WritePorts are added in the CacheGeometry section
		of the cache configuration file. These fields apply to L1 caches.
	* issue.c: memory uops are not inserted into the eventq directly, thus
		avoiding the continuous insertion in the writeback stage. Instead,
		the cache system inserts them into the eventq when the cache
		access finishes.
	* cachesystem.c: the structure and functions tracking pending cache
		accesses have been redesigned. The most important change is that
		load accesses are not repeated when a load to the same address
		is in-flight. Instead, the new aliasing loads wait to the pending one
		to be completed, and the cache access completion triggers the
		insertion into the corresponding eventq of all uops awaiting
		for the load.
